[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Matheus",email = "eduardomatheusok@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.56.0,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "googletrans (==4.0.0rc1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
